# ofs-ng

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CHEATSHEET.md  CLAUDE.md  CMakeLists.txt  README.md
lib/: CMakeLists.txt
localization/: CMakeLists.txt  strings.toml
localization/generate/: main.cpp
plugins/: CMakeLists.txt  Directory.Build.props  plugins.slnx
plugins/Ofs.Api/: AbiLayout.cs  AppScoped.cs  Commands.cs  Editing.cs  Host.cs  LogLevel.cs  Navigation.cs  Nodes.cs  Player.cs  PluginAbi.cs  PluginGuard.cs  Project.cs  ProjectScoped.cs  ScopedStore.cs  ScriptAction.cs  Selection.cs  StandardAxis.cs  Ui.cs
plugins/Ofs.Core/: CorePlugin.cs  Ofs.Core.csproj  Str.ja.resx  Str.resx
plugins/Ofs.PluginHost/: PluginBootstrapper.cs
plugins/Ofs.ScriptHost/: Ofs.ScriptHost.csproj
plugins/SamplePlugin/: SamplePlugin.cs  SamplePlugin.csproj
plugins/StarterPlugin/: .gitignore  README.md  StarterPlugin.cs  StarterPlugin.csproj
src/: CMakeLists.txt  IconResource.h  icon.rc  main.cpp
src/App/: Application.cpp  Application.h  OfsApp.cpp  OfsApp.h  OfsAppCommands.cpp  StyleScale.h
src/Core/: AppState.h  AxisClip.h  AxisEvents.h  BookmarkChapterState.h  CommandEvents.h  CustomCommand.h  EventQueue.cpp  EventQueue.h  Events.h  ExportConfig.h  FunscriptMetadata.cpp  FunscriptMetadata.h  GraphPresetEvents.h  InputEvents.h  IntentEvents.h  LocalizationEvents.h  NotifyLevel.h  OverlaySettings.h  PendingGraphLoad.h  PlaybackEvents.h  PluginEvents.h  ProcessingEffect.h  ProcessingRegion.h  ProjectLifecycleEvents.h  RegionEvents.h  SceneView.cpp  SceneView.h  SceneViewEvents.h  SceneViewTransition.h  ScriptAxisAction.h  ScriptProject.cpp  ScriptProject.h  SimulatorSettings.h  StandardAxis.cpp  StandardAxis.h  TaskEvents.h  TimeSlot.h  TranscodeEvents.h  TranscodeState.h  UpdateEvents.h  (+4 more)
src/Format/: AppSettings.cpp  AppSettings.h  BackupArchive.cpp  BackupArchive.h  Funscript.cpp  Funscript.h  LayoutStore.cpp  LayoutStore.h  MediaTypes.h  Project.cpp  Project.h
src/Localization/: AxisNames.h  TrKey.h  Translator.cpp  Translator.h
src/Platform/: DotNetHost.cpp  DotNetHost.h  Headless.h  Window.cpp  Window.h  imgui_impl_null.cpp  imgui_impl_null.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imgui_impl_sdl3.cpp  imgui_impl_sdl3.h
src/Scenegraph/: FogShader.cpp  FogShader.h  GltfLoader.cpp  GltfLoader.h  Mesh.cpp  Mesh.h  SceneGraph.cpp  SceneGraph.h  SceneShader.cpp  SceneShader.h  Shader.cpp  Shader.h  Transform.h  VrCamera.cpp  VrCamera.h  VrShader.cpp  VrShader.h  WaveformShader.cpp  WaveformShader.h
src/Services/: BindingEvents.h  BindingSystem.cpp  BindingSystem.h  CommandProviders.cpp  CommandProviders.h  CommandRegistry.h  CustomCommandStore.cpp  CustomCommandStore.h  CustomCommandTemplate.cpp  CustomCommandTemplate.h  EditIntentRouter.cpp  EditIntentRouter.h  EditModeRegistry.h  EffectRegistry.h  FooterTask.h  JobAwait.h  JobSystem.cpp  JobSystem.h  ManagedAssemblyTrust.cpp  ManagedAssemblyTrust.h  ManagedHttp.cpp  ManagedHttp.h  ModeLifecycle.h  ModeRegistry.h  NavigatorRegistry.h  NavigatorRouter.cpp  NavigatorRouter.h  NodeCategory.h  PluginApi.h  PluginManager.cpp  PluginManager.h  PluginNodeIO.h  ProcessingSystem.cpp  ProcessingSystem.h  ProjectManager.cpp  ProjectManager.h  ProjectSnapshot.h  ScriptHeader.cpp  ScriptHeader.h  ScriptNodeEvents.h  (+22 more)
src/UI/: AboutWindow.cpp  AboutWindow.h  AxisColors.h  BackupRestoreWindow.cpp  BackupRestoreWindow.h  BandBar.cpp  BandBar.h  ConfigurationWindow.cpp  ConfigurationWindow.h  DockLayout.cpp  DockLayout.h  FogBackground.cpp  FogBackground.h  FooterBar.cpp  FooterBar.h  Glyphs.h  Gradient.h  Heatmap.cpp  Heatmap.h  Icons.h  ImGuiHelpers.cpp  ImGuiHelpers.h  LogWindow.cpp  LogWindow.h  MetadataWindow.cpp  MetadataWindow.h  ModalManager.cpp  ModalManager.h  Modals.h  Notifications.h  OverlayControls.h  OverlayViewport.h  ProcessingGraphOps.cpp  ProcessingGraphOps.h  ProcessingPanel.cpp  ProcessingPanel.h  ProjectConfigWindow.cpp  ProjectConfigWindow.h  ScriptSimulator.cpp  ScriptSimulator.h  (+21 more)
src/Util/: Benchmark.h  ColorGen.h  Coro.cpp  Coro.h  CrashHandler.cpp  CrashHandler.h  FaultThrottle.h  FileFingerprint.cpp  FileFingerprint.h  FileUtil.cpp  FileUtil.h  FrameAllocator.cpp  FrameAllocator.h  FuzzyMatch.cpp  FuzzyMatch.h  Http.cpp  Http.h  InstanceLock.cpp  InstanceLock.h  JsonImGui.h  JsonUtil.h  Log.cpp  Log.h  Mnemonic.h  PathUtil.cpp  PathUtil.h  PrefVersionGuard.cpp  PrefVersionGuard.h  Resources.cpp  Resources.h  RingBuffer.h  SemVer.h  SmoothedFloat.h  Subprocess.cpp  Subprocess.h  TimeUtil.cpp  TimeUtil.h  Version.cpp  Version.h
src/Video/: DummyVideoPlayer.cpp  DummyVideoPlayer.h  MpvLoader.cpp  MpvLoader.h  MpvRenderTarget.cpp  MpvRenderTarget.h  MpvVideoPlayer.cpp  MpvVideoPlayer.h  PlaybackCursor.cpp  PlaybackCursor.h  VideoMode.h  VideoPlayer.h  VideoPlayerSettings.h  VideoPreview.cpp  VideoPreview.h
tests/: CMakeLists.txt  coverage-managed.settings.xml  test_main_ui.cpp  test_main_unit.cpp
tests/app/: test_style_scale.cpp
tests/core/: test_event_queue.cpp  test_frame_allocator.cpp  test_funscript_metadata.cpp  test_processing_graph_ops.cpp  test_processing_region.cpp  test_scene_view.cpp  test_script_project.cpp  test_standard_axis.cpp  test_time_slot.cpp  test_vector_set.cpp
tests/fixtures/: basic.ofp  malformed_alias.funscript  multi_axis_regions.expected.funscript  multi_axis_regions.funscript  multi_unmatched.funscript  roundtrip.expected.funscript  roundtrip.ofp  single_point.expected.funscript  single_point.funscript
tests/format/: test_app_settings.cpp  test_backup_archive.cpp  test_funscript.cpp  test_graph_preset.cpp  test_layout_store.cpp  test_project.cpp
tests/helpers/: EventCapture.h  FakeVideoPlayer.h  FixtureCompare.cpp  FixtureCompare.h  OfsAppTestAccess.cpp  OfsAppTestAccess.h  PluginManagerTestAccess.cpp  PluginManagerTestAccess.h  PmFixture.h  TestProject.cpp  TestProject.h  TestState.h  TimelineCoords.h
tests/localization/: test_translator.cpp
tests/plugins/: Directory.Build.props  test_dotnet_host.cpp  (+7 more)
(+195 files in other folders)
